# miroir

./: .cgen.resolved  .cgen.yml  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/miroir/: miroir.hpp
tests/: miroir_test.cpp
